video section settings

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -58,6 +58,7 @@
         --color-gray:#CCCCCC;
         --color-gray-dark:#6E6D6D;
         --hover-opacity:0.8;
+        --font-line-height:150%;
         --font-body-family: {{ settings.type_body_font.family }}, {{ settings.type_body_font.fallback_families }};
         --font-body-style: {{ settings.type_body_font.style }};
         --font-body-weight: {{ settings.type_body_font.weight }};
