--- a/assets/base.css
+++ b/assets/base.css
@@ -540,21 +540,6 @@ table:not([class]) th {
   opacity: 0.7;
 }
 
-a:empty,
-ul:empty,
-dl:empty,
-div:empty,
-section:empty,
-article:empty,
-p:empty,
-h1:empty,
-h2:empty,
-h3:empty,
-h4:empty,
-h5:empty,
-h6:empty {
-  display: none;
-}
 
 .link,
 .customer a {
@@ -1198,6 +1183,15 @@ deferred-media {
   -webkit-appearance: none;
   appearance: none;
 }
+@media screen and (max-width:607px){
+  .button{
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.10);
+    text-align: center;
+  }
+}
 .button:hover{
   border: none;
 }
@@ -1837,7 +1831,7 @@ input[type='checkbox'] {
 
 /* section-header */
 #shopify-section-header {
-  z-index: 3;
+  z-index: 999;
 }
 
 .shopify-section-header-sticky {
