--- a/assets/section-video-banner.css
+++ b/assets/section-video-banner.css
@@ -1,7 +1,124 @@
-h1.bannerHeading{
-  font-family: Bebas Neue;
-font-style: normal;
-font-weight: normal;
-font-size: 96px;
-line-height: var(--font-line-height);
+
+a.banner-button{
+  margin-bottom: 60px;
+}
+.circle1{
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin-bottom: 10px;
+}
+.circle2{
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-bottom: 10px;
+}
+.circle3{
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: #FFFFFF;
+  margin-bottom: 10px;
+}
+
+.frame-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */  
+  padding-top: 25px;
+  min-height: 577px;
+  width: 300%; /* enlarge beyond browser width */
+  left: -100%; /* center */
+}
+
+.frame-container iframe {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%;
+  z-index: 11;
+}
+.video-section-wrapper{
+  overflow-x: hidden;
+  position: relative;
+}
+.banner-text-wrapper{
+  position: absolute;
+  z-index: 12;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow-wrap: break-word;
+}
+@media screen and (max-width:1210px){
+  h1.banner-heading-h1{
+    
+    font-family: Bebas Neue;
+    color: white;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: var(--font-line-height);
+  margin-bottom: 10px;
+  text-align: center;
+  }
+  h3.banner-heading-h3{
+    font-family: Archivo Narrow;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 150%;
+  margin-top:0;
+  margin-bottom: 70px;
+  color: white;
+  }
+  .banner-text-small{
+    font-family: Archivo Narrow;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14;
+  line-height: 150%;
+    color: white;
+  }
+}
+@media screen and (min-width:1211px){
+  h1.banner-heading-h1{
+    font-family: Bebas Neue;
+    color: white;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: var(--font-line-height);
+  margin-bottom: 10px;
+  text-align: center;
+  }
+  h3.banner-heading-h3{
+    font-family: Archivo Narrow;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 150%;
+  margin-top:0;
+  margin-bottom: 70px;
+  color: white;
+  }
+  .banner-text-small{
+    font-family: Archivo Narrow;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 150%;
+    color: white;
+  }
 }
