--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -24,6 +24,6 @@
       </div>
     </div>
   </div>
-  <a href="#" class="button button-primary" style="text-align: center;">BOOK AN APPOINTMENT</a>
+  <a href="#" target="blank" class="button button-primary" style="text-align: center;">BOOK AN APPOINTMENT</a>
 </div>
 {{ 'values-video-controll.js'  | asset_url | script_tag     }}
