--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -1,18 +1,53 @@
 .footer {
-  border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  background-color:#736565;
+  padding:70px 140px 70px 140px;
 }
-
-.footer:not(.color-background-1) {
+.footer-grid{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 15px;
+}
+.footer-div1 { grid-area: 1 / 1 / 2 / 3; }
+.footer-div2 { grid-area: 1 / 3 / 2 / 8; }
+.footer-div3 { grid-area: 1 / 8 / 2 / 13; }
+.social-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-icon-wrapper{
+  width: 65px;
+  height: 65px;
+  background-color:rgba(255, 255, 255, 0.1);
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-icon-wrapper:first-child{
+  margin-right:20px;
+}
+.instagram-icon{
+  width: 30px;
+  height: 30px;
+}
+.facebook-icon{
+  width: 30px;
+  height: 30px;
+}
+/* .footer:not(.color-background-1) {
   border-top: none;
-}
+} */
 
-.footer__content-top {
+/* .footer__content-top {
   padding-bottom: 5rem;
   padding-top: 5rem;
   display: block;
-}
+} */
 
-@media screen and (max-width: 749px) {
+/* @media screen and (max-width: 749px) {
   .footer .grid {
     display: block;
     margin-left: 0;
@@ -33,9 +68,9 @@
     padding-left: calc(4rem / var(--font-body-scale));
     padding-right: calc(4rem / var(--font-body-scale));
   }
-}
+} */
 
-@media screen and (min-width: 750px) {
+/* @media screen and (min-width: 750px) {
   .footer__content-top .grid {
     margin-left: -3rem;
     row-gap: 6rem;
@@ -45,24 +80,24 @@
   .footer__content-top .grid__item {
     padding-left: 3rem;
   }
-}
+} */
 
-.footer__content-bottom {
+/* .footer__content-bottom {
   border-top: solid 0.1rem rgba(var(--color-foreground), 0.08);
   padding-top: 3rem;
   padding-bottom: 3rem;
-}
+} */
 
-.footer__content-bottom:only-child {
+/* .footer__content-bottom:only-child {
   border-top: 0;
-}
+} */
 
-.footer__content-bottom-wrapper {
+/* .footer__content-bottom-wrapper {
   display: flex;
   width: 100%;
-}
+} */
 
-@media screen and (max-width: 749px) {
+/* @media screen and (max-width: 749px) {
   .footer__content-bottom {
     flex-wrap: wrap;
     padding-top: 0;
@@ -75,23 +110,23 @@
     flex-wrap: wrap;
     row-gap: 1.5rem;
   }
-}
+} */
 
-.footer__localization:empty + .footer__column--info {
+/* .footer__localization:empty + .footer__column--info {
   align-items: center;
-}
+} */
 
-@media screen and (max-width: 749px) {
+/* @media screen and (max-width: 749px) {
   .footer__localization:empty + .footer__column {
     padding-top: 1.5rem;
   }
-}
-.footer__column {
+} */
+/* .footer__column {
   width: 100%;
   align-items: flex-end;
-}
+} */
 
-.footer__column--info {
+/* .footer__column--info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -131,9 +166,9 @@
   justify-content: center;
   align-items: flex-end;
   margin-top: 2rem;
-}
+} */
 
-.footer-block--newsletter:only-child {
+/* .footer-block--newsletter:only-child {
   margin-top: 0;
 }
 
@@ -380,7 +415,7 @@ noscript .localization-selector.link {
   .footer__copyright {
     text-align: right;
   }
-}
+} */
 
 /* .footer__copyright a {
   font-size: 1.3rem;
@@ -392,7 +427,7 @@ noscript .localization-selector.link {
   opacity: 0.75;
 } */
 
-@keyframes appear-down {
+/* @keyframes appear-down {
   0% {
     opacity: 0;
     margin-top: -1rem;
@@ -509,4 +544,4 @@ noscript .localization-selector.link {
 
 .footer .disclosure__link--active {
   text-decoration: underline;
-}
+} */
