--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -14,8 +14,37 @@
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 <noscript>{{ 'disclosure.css' | asset_url | stylesheet_tag }}</noscript>
 
-<footer class="footer color-{{ section.settings.color_scheme }} gradient">
-  {%- if section.blocks.size > 0 or section.settings.newsletter_enable or section.settings.show_social -%}
+<footer class="footer">
+  <div class="footer-grid">
+    <div class="footer-div1">
+      <img src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="footer-logo">
+      <div class="social-wrapper">
+        <div class="social-icon-wrapper">
+          <img src="{{'instagram.svg'| asset_url }}" alt="Instagram icon" class="instagram-icon">
+        </div>
+        <div class="social-icon-wrapper">
+          <img src="{{'facebook-icon.svg'| asset_url }}" alt="Facebook icon" class="facebook-icon">
+        </div>
+      </div>
+    </div>
+    <div class="footer-div2">
+      
+        <ul class="footer-block__details-content list-unstyled">
+          {% for link in linkLists.main-menu.links %}
+            <li>
+              <a href="{{ link.url }}" class="footer-link">
+                {{ link.title }}
+              </a>
+            </li>
+          {%- endfor -%}
+        </ul>
+      
+    </div>
+    <div class="footer-div3"></div>
+  </div>
+
+
+  <!-- {%- if section.blocks.size > 0 or section.settings.newsletter_enable or section.settings.show_social -%}
     <div class="footer__content-top page-width">
       {%- if section.blocks.size > 0 -%}
         {%- liquid
@@ -120,9 +149,9 @@
               {%- endif -%}
             {%- endform -%}
           </div>
-        {%- endif -%}
+        {%- endif -%} -->
 
-        {%- if section.settings.show_social -%}
+        <!-- {%- if section.settings.show_social -%}
           <ul class="footer__list-social list-unstyled list-social" role="list">
             {%- if settings.social_twitter_link != blank -%}
               <li class="list-social__item">
@@ -197,12 +226,12 @@
               </li>
             {%- endif -%}
           </ul>
-        {%- endif -%}
+        {%- endif -%} -->
       </div>
     </div>
   {%- endif -%}
 
-  <div class="footer__content-bottom">
+  <!-- <div class="footer__content-bottom">
     <div class="footer__content-bottom-wrapper page-width">
       <div class="footer__column footer__localization">
         {%- if section.settings.enable_country_selector and localization.available_countries.size > 1 -%}
@@ -245,9 +274,9 @@
               </div>
             {%- endform -%}
           </localization-form>
-        {%- endif -%}
+        {%- endif -%} -->
 
-        {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
+        <!-- {%- if section.settings.enable_language_selector and localization.available_languages.size > 1 -%}
           <noscript>
             {%- form 'localization', id: 'FooterLanguageFormNoScript', class: 'localization-form' -%}
               <div class="localization-form__select">
@@ -263,9 +292,9 @@
               </div>
               <button class="button button--tertiary">{{ 'localization.update_language' | t }}</button>
             {%- endform -%}
-          </noscript>
+          </noscript> -->
 
-          <localization-form>
+          <!-- <localization-form>
             {%- form 'localization', id: 'FooterLanguageForm', class: 'localization-form' -%}
               <div class="no-js-hidden">
                 <h2 class="caption-large text-body" id="FooterLanguageLabel">{{ 'localization.language_label' | t }}</h2>
@@ -289,8 +318,8 @@
             {%- endform -%}
           </localization-form>
         {%- endif -%}
-      </div>
-      <div class="footer__column footer__column--info">
+      </div> -->
+      <!-- <div class="footer__column footer__column--info">
         {%- if section.settings.payment_enable -%}
           <div class="footer__payment">
             <span class="visually-hidden">{{ 'sections.footer.payment' | t }}</span>
@@ -307,9 +336,9 @@
           <small class="copyright__content">&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: routes.root_url }}</small>
           <small class="copyright__content">{{ powered_by_link }}</small>
         </div>
-      </div>
-    </div>
-  </div>
+      </div> -->
+    <!-- </div>
+  </div> -->
 </footer>
 
 {% javascript %}
