--- a/assets/base.css
+++ b/assets/base.css
@@ -544,15 +544,8 @@ table:not([class]) th {
 .link,
 .customer a {
   cursor: pointer;
-  display: inline-block;
   border: none;
   box-shadow: none;
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
-  color: rgb(var(--color-link));
-  background-color: transparent;
-  font-size: 1.4rem;
-  font-family: inherit;
 }
 
 .link--text {
@@ -1237,7 +1230,7 @@ deferred-media {
 
 /* Button - hover */
 
-.button:not([disabled]):hover,
+.button:not([disabled]).button-primary:hover,
 .shopify-challenge__button:hover,
 .customer button:hover {
   background-color: rgba(55,152,219, 0.8);
@@ -1464,6 +1457,8 @@ details[open] > .share-button__fallback {
   position: relative;
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .customer .field {
