--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -20,27 +20,87 @@
       <img src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="footer-logo">
       <div class="social-wrapper">
         <div class="social-icon-wrapper">
-          <img src="{{'instagram.svg'| asset_url }}" alt="Instagram icon" class="instagram-icon">
+          <a href="#" target="blank"><img src="{{'instagram.svg'| asset_url }}" alt="Instagram icon" class="instagram-icon"></a>
         </div>
         <div class="social-icon-wrapper">
-          <img src="{{'facebook-icon.svg'| asset_url }}" alt="Facebook icon" class="facebook-icon">
+          <a href="#" target="blank"><img src="{{'facebook-icon.svg'| asset_url }}" alt="Facebook icon" class="facebook-icon"></a>
         </div>
       </div>
     </div>
     <div class="footer-div2">
-      
-        <ul class="footer-block__details-content list-unstyled">
-          {% for link in linkLists.main-menu.links %}
+      <div class="footer-nav">
+        <ul class="footer-list">
+          {% for link in linklists.footer-menu-left.links %}
             <li>
-              <a href="{{ link.url }}" class="footer-link">
-                {{ link.title }}
-              </a>
+              <a href="{{ link.url }}" class="link footer-link">{{ link.title }}</a>
             </li>
-          {%- endfor -%}
+          {% endfor %}
         </ul>
+        <ul class="footer-list">
+          {% for link in linklists.footer-menu-right.links %}
+            <li>
+              <a href="{{ link.url }}" class="link footer-link">{{ link.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class="line"></div>
+      <ul class="footer-list horizontal">
+        {% for link in linklists.legal-menu.links %}
+          <li class="legal-link">
+            <a href="{{ link.url }}" class="link footer-link">{{ link.title }}</a>
+          </li>
+        {% endfor %}
+        
+      </ul>
+      
       
     </div>
-    <div class="footer-div3"></div>
+    <div class="footer-div3">
+      <div class="footer-block__newsletter">
+        {%- if section.settings.newsletter_heading != blank -%}
+          <h2 class="newsletter-heading">SIGN UP FOR OUR NEWSLETTER</h2>
+          <p class="newsletter-text">Be the first to learn about latest news and get exclusive offers.</p>
+        {%- endif -%}
+        {%- form 'customer', id: 'ContactFooter', class: 'footer__newsletter newsletter-form' -%}
+          <input type="hidden" name="contact[tags]" value="newsletter">
+          <div class="newsletter-form__field-wrapper">
+            <div class="field">
+              <input
+                id="NewsletterForm--{{ section.id }}"
+                type="email"
+                name="contact[email]"
+                class="input-field"
+                value="{{ form.email }}"
+                aria-required="true"
+                autocorrect="off"
+                autocapitalize="off"
+                autocomplete="email"
+                {% if form.errors %}
+                  autofocus
+                  aria-invalid="true"
+                  aria-describedby="ContactFooter-error"
+                {% elsif form.posted_successfully? %}
+                  aria-describedby="ContactFooter-success"
+                {% endif %}
+                placeholder="Email Address"
+                required
+              >
+              
+              <button type="submit" class="button button-white" name="commit" id="Subscribe" aria-label="{{ 'newsletter.button_label' | t }}">
+                Subscribe
+              </button>
+            </div>
+            {%- if form.errors -%}
+              <small class="newsletter-form__message form__message" id="ContactFooter-error">{% render 'icon-error' %}{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}</small>
+            {%- endif -%}
+          </div>
+          {%- if form.posted_successfully? -%}
+            <h3 class="newsletter-form__message newsletter-form__message--success form__message" id="ContactFooter-success" tabindex="-1" autofocus>{% render 'icon-success' %}{{ 'newsletter.success' | t }}</h3>
+          {%- endif -%}
+        {%- endform -%}
+      </div>
+    </div>
   </div>
 
 
@@ -227,9 +287,9 @@
             {%- endif -%}
           </ul>
         {%- endif -%} -->
-      </div>
+      <!-- </div>
     </div>
-  {%- endif -%}
+  {%- endif -%} -->
 
   <!-- <div class="footer__content-bottom">
     <div class="footer__content-bottom-wrapper page-width">
