--- a/sections/main-faq.liquid
+++ b/sections/main-faq.liquid
@@ -1,75 +1,78 @@
 {{ 'section-faq.css' | asset_url | stylesheet_tag }}
 <div class="faq-section-wrapper">
-  <h2 class="faq-title">
-    FREQUENTLY ASKED QUESTIONS
-  </h2>
-  <div class="faq-grid">
-    <div class="faq-div1">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+  <div class="container-main" style="width: 100%;">
+    <h2 class="faq-title">
+      FREQUENTLY ASKED QUESTIONS
+    </h2>
+    <div class="faq-grid">
+      <div class="faq-div1">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
-    </div>
-    <div class="faq-div2">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+      <div class="faq-div2">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
-    </div>
-    <div class="faq-div3">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+      <div class="faq-div3">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
-    </div>
-    <div class="faq-div4">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+      <div class="faq-div4">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
-    </div>
-    <div class="faq-div5">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+      <div class="faq-div5">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
-    </div>
-    <div class="faq-div6">
-      <div class="faq-page">
-        <h3 class="faq-heading">
-          Question?
-        </h3>
-        <div class="faq-icon"></div>
+      <div class="faq-div6">
+        <div class="faq-page">
+          <h3 class="faq-heading">
+            Question?
+          </h3>
+          <div class="faq-icon"></div>
+        </div>
+        <p class="faq-text">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+        </p>
       </div>
-      <p class="faq-text">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-      </p>
     </div>
   </div>
+  
 </div>
 {{ 'faq-controll.js'  | asset_url | script_tag     }}
