--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -12,10 +12,9 @@
 <div class="video-section-wrapper">
   
   <div class="frame-container">
-    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/668nUCeBHyY?playlist=668nUCeBHyY&controls=0&autoplay=1&loop=1&disablekb=1" allow="autoplay">
-    </iframe>
-    
+    <video id="bannerVid" muted autoplay loop>
+      <source src="{{'placeholder.mp4' | asset_url }}" type="video/mp4" >
+    </video>    
   </div>
   
 </div> 
