--- a/assets/section-faq.css
+++ b/assets/section-faq.css
@@ -1,3 +1,7 @@
+.faq-section-wrapper{
+  display: flex;
+  justify-content: center;
+}
 .faq-title{
   font-family: Bebas Neue,sans-serif;
   font-style: normal;
