--- a/assets/section-guarantee.css
+++ b/assets/section-guarantee.css
@@ -2,19 +2,24 @@
   background-color: #A99797;
   display: flex;
 }
+/* .guarantee-text-wrapper{
+  display: flex;
+  flex-direction: column;
+} */
 .guarantee-title{
-  font-family: Bebas Neue;
+  font-family: Bebas Neue,sans-serif;
 font-style: normal;
 font-weight: normal;
 line-height: 150%;
 text-align: center;
 color: #FFFFFF;
+margin-top: 0;
 }
 .guarantee-text{
-  font-family: Archivo Narrow;
+  font-family: Archivo Narrow,c;
 font-style: normal;
 font-weight: normal;
-
+margin-top: 0;
 line-height: 150%;
 text-align: center;
 color: #FFFFFF;
@@ -33,20 +38,21 @@ color: #FFFFFF;
   font-size: 22px;
 }
 .left-badge-wrapper{
-width: 400px;
-height: 400px;
+width: 300px;
+height: 300px;
 background-image: url(guarantee-left.png);
 background-repeat: no-repeat;
-background-position-y: -11px;
-background-size: 203px;
+background-position-y: 55px;
+/* background-size: 203px; */
 }
 
 .mobile-badge{
   display: none;
 }
 .right-badge{
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 300px;
+  max-height: 300px;
+  align-self: flex-end;
 }
 }
 @media screen and (max-width:1210px){
