--- a/assets/section-values.css
+++ b/assets/section-values.css
@@ -1,3 +1,7 @@
+.values-section-container{
+  display: flex;
+  justify-content: center;
+}
 #valuesOverlay{
   display: flex;
   justify-content: center;
@@ -9,6 +13,10 @@
   max-height: 100%;
   overflow: hidden;
   position: relative;
+}
+.values-icon{
+  width: 100%;
+  max-height: 78px;
 }
 #valuesVideo{
   width: 100%;
@@ -46,9 +54,15 @@ filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
     }
     
     .values-div1 { grid-area: 1 / 1 / 2 / 4; }
-    .values-div2 { grid-area: 1 / 4 / 2 / 7; }
-    .values-div3 { grid-area: 1 / 7 / 2 / 10; }
-    .values-div4 { grid-area: 1 / 10 / 2 / 13; }
+    .values-div2 { grid-area: 1 / 4 / 2 / 7;
+      display: flex;
+      justify-content: center; }
+    .values-div3 { grid-area: 1 / 7 / 2 / 10;
+      display: flex;
+      justify-content: center; }
+    .values-div4 { grid-area: 1 / 10 / 2 / 13;
+    display: flex;
+  justify-content: flex-end; }
     .values-video-wrapper{
       margin-bottom: 50px;
     }
@@ -69,9 +83,15 @@ filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
     }
     
     .values-div1 { grid-area: 1 / 1 / 2 / 2; }
-    .values-div2 { grid-area: 1 / 2 / 2 / 3; }
+    .values-div2 { grid-area: 1 / 2 / 2 / 3;
+      display: flex;
+      justify-content: flex-end;
+    }
     .values-div3 { grid-area: 2 / 1 / 3 / 2; }
-    .values-div4 { grid-area: 2 / 2 / 3 / 3; }
+    .values-div4 { grid-area: 2 / 2 / 3 / 3;
+      display: flex;
+      justify-content: flex-end;
+     }
     .values-video-wrapper{
       margin-bottom: 40px;
     }
