--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -1,4 +1,5 @@
 {{ 'section-transformation.css' | asset_url | stylesheet_tag }}
+<script src="https://kit.fontawesome.com/82660b79a6.js" crossorigin="anonymous"></script>
 <div class="container">
   <div class="slider-overlay">
     <div class="overlay-row">
